static/css/bohOrderDisplay.css
@media (min-width: 600px) {
    .center-text {
        font-size: 40px;
    }
}
body {
    background: url(/static/images/fohBackground.jpg) no-repeat center center fixed;
    background-size: cover;
    height: 100vh; 
    width: 100vw;  
    margin: 0;
    padding: 0;
    overflow-x: hidden; 
    overflow-y: auto; 
}

#container {
    width: 100%;
    height: 100vh;
    display: flex;
    flex-wrap: nowrap;
    overflow-x: auto;
    gap: 16px;
    padding: 1%;
}

.blockSubmitted, .blockReady{
    display: flex;
    flex: 0 0 auto;
    flex-direction: column;
    justify-content: space-between;
    width: 300px;
    height: 90%;
    margin: 1%;
    border-radius: 10px;
    padding: 1%;
    font-family: "Italiana";
    font-weight: bold;
    flex-grow: 0;
}

.blockSubmitted {
    border: 1px solid #b3e6ff;
    background-color: #cceeff;
}

.blockReady {
    border: 1px solid #b3ffb3;
    background-color: #ccffcc;
}

main{
    width: 100%;
    height: calc(100vh - 50px);  /* Full height minus header */
    display: flex;
    flex-direction: column;
    align-items: center;
    overflow-y: auto;
    overflow-x: hidden;
}

h2{
    font-size: 2rem;
    font-weight: bold;
    margin: 0%;
}

.notes {
    white-space: pre-wrap;  /* Maintain white spaces and wrap */
    word-wrap: break-word;  /* Break long words if necessary */
    overflow-wrap: break-word;  /* Break words to prevent overflow */
}

.orderTop {
    display: flex;
    flex-direction: column;
    align-content: flex-start;
    align-items: flex-start;
    margin: 0%;
    border-radius: 10px;
    border: 1px solid #e6e6e6;
    background-color: #333333;
    color: white;
    padding-left: 2%;
}

.orderItems {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    width: 100%;
}

.orderItem {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    margin-top: 1%;
    margin-bottom: 1%;
    padding-left: 2%;
    border: 1px solid #e6e6e6;
    border-radius: 7px;
    background-color: white;
}

.orderNotes {
    justify-content: space-between;
    align-items: center;
    background-color: white;
    width: 100%;
    padding-left: 2%;
    border: 1px solid #e6e6e6;
    border-radius: 7px;
}

button {
    background-color: white;
    width: 100%;
    margin-top: auto;
    border: none;
    border-radius: 8px;
    padding: 4%;
    font-size: 1.2rem;
    cursor: pointer;
    font-family: "Italiana";
    font-weight: bold;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
    transition: transform 0.2s ease;
}

button:hover {
    background-color: #f1f1f1;
}

button:active {
    transform: scale(0.95);
}

html, body {
    height: 100%;
    margin: 0;
    padding: 0;
    overflow: hidden;
}

